# My-Books-App

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .docker.env  .dockerignore  .env  .flake8  backend.dockerfile  prestart.sh  pyproject.toml  requirements.txt
backend/backend/: initial_data.py  main.py
backend/backend/api/: deps.py
backend/backend/api/api_v1/: api.py
backend/backend/api/api_v1/endpoints/: books.py  login.py  shelves.py  users.py  utils.py
backend/backend/core/: config.py  security.py
backend/backend/crud/: __init__.py  base.py  crud_book.py  crud_shelf.py  crud_user.py
backend/backend/db/: base.py  books_data.csv  init_db.py
backend/backend/models/: __init__.py  book.py  shelf.py  user.py
backend/backend/schemas/: __init__.py  book.py  shelf.py  user.py
backend/backend/tests/: conftest.py
backend/backend/tests/crud/: crud_book_test.py  crud_shelf_test.py  crud_user_test.py  test_user.py
backend/backend/tests/utils/: book_util.py  shelf_util.py  user.py  user_util.py  utils.py
frontend/: .env  frontend.dockerfile  package-lock.json  package.json
frontend/src/: api.ts  main.ts  router.ts
frontend/src/interfaces/: index.ts
frontend/src/plugins/: vue-good-table.ts
frontend/src/shared/api/: endpoints.ts
frontend/src/shared/http/: HttpClient.ts
frontend/src/store/main/: actions.ts  getters.ts  index.ts  mutations.ts  state.ts
frontend/src/views/main/: AddBookDialog.vue  BookDetails.vue  Dashboard.vue
frontend/src/views/main/profile/: UserProfile.vue  UserProfileEdit.vue
